--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -10,9 +10,11 @@
 <body>
 
   <header>
-    <div class="container">
+    <div class="container" style="display: flex; align-items: center; gap: 15px;">
+      <!-- Photo en haut à gauche -->
+      <img src="img/profil.jpg" alt="Photo de Anshuza Baleke Tony" style="height: 60px; width: 60px; border-radius: 50%;" />
       <h1>Anshuza Baleke Tony</h1>
-      <button id="menu-toggle">☰</button>
+      <button id="menu-toggle" style="margin-left: auto;">☰</button>
       <nav id="menu">
         <ul>
           <li><a href="#about">À propos</a></li>
@@ -26,23 +28,26 @@
   <main class="container">
     <section id="about" class="card">
       <h2>À propos</h2>
-      <p>Je suis étudiant à l’Université Protestante au Congo (UPC), passionné par le développement web, l’UI/UX design et les technologies modernes comme JavaScript, React, et Node.js. J’aime créer des interfaces élégantes et fonctionnelles.</p>
+      <p>Je suis étudiant à l’Université Protestante au Congo (UPC), passionné par la cybersécurité et les technologies de l’information, je me spécialise dans la protection des systèmes informatiques, l’analyse des vulnérabilités et la mise en place de solutions de défense efficaces. Autodidacte et curieux, je développe continuellement mes compétences à travers des projets pratiques, des CTFs (Capture The Flag) et des certifications en sécurité informatique.
+
+Mon objectif est de contribuer à un cyberespace plus sûr en aidant les entreprises et les particuliers à mieux se protéger contre les menaces numériques. Sur ce portfolio, vous découvrirez mes projets, mes compétences techniques, et mes réalisations dans le domaine de la cybersécurité.</p>
     </section>
 
     <section id="projects" class="card">
       <h2>Projets</h2>
       <ul class="projects-list">
         <li>
-          <h3>Application de réservation de taxi</h3>
-          <p>Une application web responsive pour réserver des taxis dans les quartiers de Kinshasa.</p>
+          <h3>Analyse de réseau avec Wireshark</h3>
+         <p>Capture et analyse de paquets réseau pour détecter des tentatives de scans, des connexions non autorisées et des fuites de données. Rapport complet avec visualisation du trafic réseau.
+</p>
         </li>
         <li>
           <h3>Portfolio interactif</h3>
           <p>Un portfolio personnel conçu avec HTML5, CSS3, JavaScript et animations CSS.</p>
         </li>
         <li>
-          <h3>Jeu JavaScript</h3>
-          <p>Un jeu de devinettes avec une logique simple mais engageante, codé en pur JavaScript.</p>
+          <h3>Simulation d’une attaque de phishing</h3>
+          <p>Création d’une page de phishing simulée dans un cadre de test, pour sensibiliser aux risques. Démonstration d’ingénierie sociale et analyse des protections anti-phishing.</p>
         </li>
       </ul>
     </section>
